# bazel_nondeterministic_actions

./: .gitignore  WORKSPACE  example.sh
bazel_nondeterministic_actions/: BUILD.bazel
bazel_nondeterministic_actions/src/: main.rs
cargo/: BUILD  cargo.toml  crates.bzl
cargo/remote/: aho-corasick-0.7.13.BUILD  lazy_static-1.4.0.BUILD  log-0.3.6.BUILD  memchr-2.3.3.BUILD  regex-1.3.9.BUILD  regex-syntax-0.6.18.BUILD  thread_local-1.0.1.BUILD
example/: BUILD.bazel
